--- a/transparent-world/package.json
+++ b/transparent-world/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@monaco-editor/react": "^4.7.0",
+    "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.0.0",
