--- a/transparent-world/package.json
+++ b/transparent-world/package.json
@@ -17,6 +17,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.0",
+    "@mui/x-data-grid": "^8.5.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
