--- a/transparent-world/package.json
+++ b/transparent-world/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.5.0",
+    "highlight.js": "^11.11.1",
     "monaco-editor": "^0.52.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
